@@ -1,5 +1,6 @@
 5.0.3
 [fix] Kodi 19 not working
+[fix] remove LOGNOTICE AND LOGSEVERE, both removed in Kodi 19
 5.0.2
 [upd] Use new settings format on Kodi 19
 
